Rem footer animations; fix language mis-alignment.
Add:
        app.py, templates/layout.html, static/sass/main.sass
                -Remove footer's slide-up animation; the additional content
                displayed (a copyright statement) is superfluous.

--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -29,23 +29,15 @@ div#container
             width: 75%
 
     div#footer
-        @extend .t3
-        @include delay(1s)
-
         background-color: $baseColor1
-        bottom: -30px
-        height: 60px
+        bottom: 0
+        height: 30px
         padding-bottom: 5px
         padding-top: 15px
         position: fixed
         text-align: center
         width: 100%
         z-index: 100
-
-        &:hover
-            @include delay(0s)
-
-            bottom: 0
 
         *
             color: white
@@ -60,6 +52,3 @@ div#container
 
             &:hover
                 text-decoration: underline
-
-        p span
-            font-size: 0.7em
